--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ main {
 .problem-box {
     background-color: #ffffff;
     border: 2px solid #00796b; /* Teal border */
-    padding: 20px;
+    padding: 0px 20px 0px 20px;
     margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -147,6 +147,8 @@ main {
 
 .problem-box h2 {
     color: #004d40; /* Dark teal for problem source */
+    margin-block-end: 0em;
+    margin-block-start: 0.5em;
 }
 
 .problem-box p {
